--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.2",
     "push-dir": "^0.4.1",
